<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.feng.netmaster.com.feng.netmaster.MainActivity">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import_ext"
        android:title="@string/action_import_ext"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fliter"
        android:icon="@drawable/ic_fliter"
        android:title="@string/action_fliter"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/show_user_app"
                android:title="@string/show_app"
                android:checkable="true"
                android:checked="true"
                app:actionViewClass="android.widget.CheckBox"
                app:showAsAction="never|withText"/>
            <item
                android:id="@+id/show_system_app"
                android:title="@string/show_system"
                android:checkable="true"
                android:checked="true"
                app:actionViewClass="android.widget.CheckBox"
                app:showAsAction="never|withText"/>
            <item
                android:id="@+id/search_view"
                android:title="@string/search_view"
                app:showAsAction="never|withText"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_rulemanager"
        android:icon="@drawable/ic_task"
        android:title="@string/action_iptables"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/apply_all_rules"
                android:title="@string/action_apply_all_rules"
                app:showAsAction="ifRoom|withText"/>
            <item
                android:id="@+id/clear_all_rules"
                android:title="@string/action_clear_all_rules"
                app:showAsAction="ifRoom|withText"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_apply"
        android:icon="@drawable/ic_apply"
        app:iconTint="#800080"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        app:iconTint="#800080"
        android:visible="false"
        app:showAsAction="always"/>

</menu>

