<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/iptablesfragment"
        android:name="com.feng.netmaster.iptablesFragment"
        android:label="@string/nav_iptables_fragment_label"
        tools:layout="@layout/fragment_iptables">
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.feng.netmaster.About"
        android:label="@string/nav_about_fragment_label"
        tools:layout="@layout/fragment_about">
    </fragment>
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.feng.netmaster.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_AppFragment"
            app:destination="@id/appFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_nav_iptables_fragmentFragment"
            app:destination="@id/iptablesfragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.feng.netmaster.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/appFragment"
        android:name="com.feng.netmaster.appFragment"
        android:label="@string/app_fragment_label"
        tools:layout="@layout/fragment_app">
        <action
            android:id="@+id/action_appFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

</navigation>